--- a/EthansScorekeeperApp/app/build.gradle
+++ b/EthansScorekeeperApp/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.ethansscorekeeperapp"
+        applicationId "com.woodhill.ethansscorekeeperapp"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
